Fully tested on live

--- a/PhedPay/Views/Payment/ConfirmPayment.cshtml
+++ b/PhedPay/Views/Payment/ConfirmPayment.cshtml
@@ -337,12 +337,12 @@
                     <button type="submit" class="btn btn-success submit-btn">
                         <i class="bi bi-credit-card me-2"></i>Proceed to Payment Xpress
                     </button>
-                    <button type="button" class="btn btn-primary submit-btn" onclick="payWithInterswitch()">
+                   @* <button type="button" class="btn btn-primary submit-btn" onclick="payWithInterswitch()">
                         <i class="bi bi-credit-card-2-front me-2"></i>Proceed to Payment Interswitch
                     </button>
                     <button type="submit" asp-action="InitializeGlobalPay" formtarget="_blank" class="btn btn-danger submit-btn">
                         <i class="bi bi-bank me-2"></i>Proceed to Zenith GlobalPay
-                    </button>
+                    </button> *@
                     <a asp-action="Index" class="btn btn-outline-secondary cancel-btn">
                         <i class="bi bi-arrow-left me-2"></i>Go Back
                     </a>
